public/css/style.css
a {
    text-decoration: none;
    color: grey;
}

a:visited {
    color: grey;
}

li {
    list-style-type: none;
}

.posts_list {
    padding-left: 3px;
    margin-top: 1rem;
}

.comments_list {
    padding-left: 17px;
    padding-right: 17px;
}

.post_links:visited {
    color: purple;
}

.arrows {
    cursor: pointer;
    font-size: 24px;
}

.voted_up {
    color: orange!important;
}

.voted_down {
    color: #00fcff!important;
}

.version {
    font-size: 22px;
}

#sort_order {
    width: 80px!important;
}

@media (max-width: 767px) {
    body, .btn, .arrows, .post_links, .vote_count, .col-xs-6 > .h5, .h4 {
        font-size: 0.8rem;
    }
    .navbar-brand {
        font-size: 1.15rem;
    }
}

.replies {
    margin-left: 35px;
}

.comment-chain{
    border: #c6c8ca 1px solid;
    padding: 20px;
    margin-bottom: 20px;
}

.individual_post {
    border: #c6c8ca 1px solid;
    padding: 20px;
    margin-bottom: 10px;
    animation-name: fadeIn;
    animation-duration: .5s;
}

@keyframes fadeIn {
    from {opacity: 0.2;}
    to {opacity: 1}
}

.sort-comments-row {
    margin-top: 3%;
}

.show-post-class {
    margin-left: 7px;
}

@media (min-width: 768px) {
    .individual_post {
        padding-bottom: 30px;
        padding-left: 45px;
    }
}

.submit-container {
    margin-bottom: 5%;
}

.hiddenPostParagraphTag {
    padding: 35px;
    border: 1px solid #dc3545;
    color: #dc3545;
    margin-bottom: 10px;
}

